fix horizontal scroll

--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 *,
@@ -55,15 +54,8 @@ a {
 
 html,
 body {
-  min-width: 320px;
+  /* Убирает прокрутку по горизонтале, для мобильной версии */
   overflow-x: hidden;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  min-height: 100vh;
 }
 
 /* Page */
@@ -112,7 +104,7 @@ body {
   padding-top: 10px;
   padding-bottom: 12px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -761,7 +753,7 @@ ul.tabs-content__list {
     background-color: #fff;
     width: 25px;
     height: 2px;
-    right: 15px;
+    right: 25px;
     top: 34px;
     transition: all 0.3s;
   }
@@ -773,7 +765,7 @@ ul.tabs-content__list {
     position: absolute;
     width: 20px;
     height: 2px;
-    right: 15px;
+    right: 25px;
     transition: all 0.3s;
     cursor: pointer;
   }
